// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`domain (integration) should be able to shrink a.b.c.d.e.f.g.h.i.j.k.l.m.n.o.p.q.r.s.t.u.v.w.x.y.z.fr 1`] = `
""a.b.c.d.e.f.g.h.i.j.k.l.m.n.o.p.q.r.s.t.u.v.w.x.y.z.fr"
├> "z.fr"
|  ├> "a.fr"
|  |  ├> "a.ar"
|  |  |  ├> "a.aa"
|  |  |  ├> "a.aj"
|  |  |  |  ├> "a.af"
|  |  |  |  |  ├> "a.ad"
|  |  |  |  |  |  └> "a.ac"
|  |  |  |  |  |     └> "a.ab"
|  |  |  |  |  |        └> "a.aa"
|  |  |  |  |  └> "a.ae"
|  |  |  |  |     └> "a.ad"
|  |  |  |  |        ├> "a.aa"
|  |  |  |  |        └> "a.ac"
|  |  |  |  |           └> "a.ab"
|  |  |  |  |              └> "a.aa"
|  |  |  |  ├> "a.ah"
|  |  |  |  |  └> "a.ag"
|  |  |  |  |     └> "a.af"
|  |  |  |  |        ├> "a.aa"
|  |  |  |  |        ├> "a.ad"
|  |  |  |  |        |  └> "a.ac"
|  |  |  |  |        |     └> "a.ab"
|  |  |  |  |        |        └> "a.aa"
|  |  |  |  |        └> "a.ae"
|  |  |  |  |           └> "a.ad"
|  |  |  |  |              ├> "a.aa"
|  |  |  |  |              └> "a.ac"
|  |  |  |  |                 └> "a.ab"
|  |  |  |  |                    └> "a.aa"
|  |  |  |  └> "a.ai"
|  |  |  |     └> "a.ah"
|  |  |  |        ├> "a.aa"
|  |  |  |        ├> "a.ae"
|  |  |  |        |  ├> "a.ac"
|  |  |  |        |  |  └> "a.ab"
|  |  |  |        |  |     └> "a.aa"
|  |  |  |        |  └> "a.ad"
|  |  |  |        |     └> "a.ac"
|  |  |  |        |        ├> "a.aa"
|  |  |  |        |        └> "a.ab"
|  |  |  |        |           └> "a.aa"
|  |  |  |        └> "a.ag"
|  |  |  |           └> "a.af"
|  |  |  |              └> "a.ae"
|  |  |  |                 ├> "a.aa"
|  |  |  |                 ├> "a.ac"
|  |  |  |                 |  └> "a.ab"
|  |  |  |                 |     └> "a.aa"
|  |  |  |                 └> "a.ad"
|  |  |  |                    └> "a.ac"
|  |  |  |                       ├> "a.aa"
|  |  |  |                       └> "a.ab"
|  |  |  |                          └> "a.aa"
|  |  |  ├> "a.an"
|  |  |  |  ├> "a.al"
|  |  |  |  |  └> "a.ak"
|  |  |  |  |     └> "a.aj"
|  |  |  |  |        ├> "a.aa"
|  |  |  |  |        ├> "a.af"
|  |  |  |  |        |  ├> "a.ad"
|  |  |  |  |        |  |  └> "a.ac"
|  |  |  |  |        |  |     └> "a.ab"
|  |  |  |  |        |  |        └> "a.aa"
|  |  |  |  |        |  └> "a.ae"
|  |  |  |  |        |     └> "a.ad"
|  |  |  |  |        |        ├> "a.aa"
|  |  |  |  |        |        └> "a.ac"
|  |  |  |  |        |           └> "a.ab"
|  |  |  |  |        |              └> "a.aa"
|  |  |  |  |        ├> "a.ah"
|  |  |  |  |        |  └> "a.ag"
|  |  |  |  |        |     └> "a.af"
|  |  |  |  |        |        ├> "a.aa"
|  |  |  |  |        |        ├> "a.ad"
|  |  |  |  |        |        |  └> "a.ac"
|  |  |  |  |        |        |     └> "a.ab"
|  |  |  |  |        |        |        └> "a.aa"
|  |  |  |  |        |        └> "a.ae"
|  |  |  |  |        |           └> "a.ad"
|  |  |  |  |        |              ├> "a.aa"
|  |  |  |  |        |              └> "a.ac"
|  |  |  |  |        |                 └> "a.ab"
|  |  |  |  |        |                    └> "a.aa"
|  |  |  |  |        └> "a.ai"
|  |  |  |  |           └> "a.ah"
|  |  |  |  |              ├> "a.aa"
|  |  |  |  |              ├> "a.ae"
|  |  |  |  |              |  ├> "a.ac"
|  |  |  |  |              |  |  └> "a.ab"
|  |  |  |  |              |  |     └> "a.aa"
|  |  |  |  |              |  └> "a.ad"
|  |  |  |  |              |     └> "a.ac"
|  |  |  |  |              |        ├> "a.aa"
|  |  |  |  |              |        └> "a.ab"
|  |  |  |  |              |           └> "a.aa"
|  |  |  |  |              └> "a.ag"
|  |  |  |  |                 └> "a.af"
|  |  |  |  |                    └> "a.ae"
|  |  |  |  |                       └> …
|  |  |  |  └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;

exports[`domain (integration) should be able to shrink domain.com 1`] = `
""domain.com"
├> "aomain.com"
|  ├> "a.com"
|  |  ├> "a.om"
|  |  |  ├> "a.am"
|  |  |  |  ├> "a.aa"
|  |  |  |  ├> "a.ag"
|  |  |  |  |  ├> "a.ad"
|  |  |  |  |  |  └> "a.ac"
|  |  |  |  |  |     └> "a.ab"
|  |  |  |  |  |        └> "a.aa"
|  |  |  |  |  └> "a.af"
|  |  |  |  |     └> "a.ae"
|  |  |  |  |        └> "a.ad"
|  |  |  |  |           ├> "a.aa"
|  |  |  |  |           └> "a.ac"
|  |  |  |  |              └> "a.ab"
|  |  |  |  |                 └> "a.aa"
|  |  |  |  ├> "a.aj"
|  |  |  |  |  └> "a.ai"
|  |  |  |  |     └> "a.ah"
|  |  |  |  |        └> "a.ag"
|  |  |  |  |           ├> "a.aa"
|  |  |  |  |           ├> "a.ad"
|  |  |  |  |           |  └> "a.ac"
|  |  |  |  |           |     └> "a.ab"
|  |  |  |  |           |        └> "a.aa"
|  |  |  |  |           └> "a.af"
|  |  |  |  |              └> "a.ae"
|  |  |  |  |                 └> "a.ad"
|  |  |  |  |                    ├> "a.aa"
|  |  |  |  |                    └> "a.ac"
|  |  |  |  |                       └> "a.ab"
|  |  |  |  |                          └> "a.aa"
|  |  |  |  └> "a.al"
|  |  |  |     └> "a.ak"
|  |  |  |        └> "a.aj"
|  |  |  |           ├> "a.aa"
|  |  |  |           ├> "a.af"
|  |  |  |           |  ├> "a.ad"
|  |  |  |           |  |  └> "a.ac"
|  |  |  |           |  |     └> "a.ab"
|  |  |  |           |  |        └> "a.aa"
|  |  |  |           |  └> "a.ae"
|  |  |  |           |     └> "a.ad"
|  |  |  |           |        ├> "a.aa"
|  |  |  |           |        └> "a.ac"
|  |  |  |           |           └> "a.ab"
|  |  |  |           |              └> "a.aa"
|  |  |  |           ├> "a.ah"
|  |  |  |           |  └> "a.ag"
|  |  |  |           |     └> "a.af"
|  |  |  |           |        ├> "a.aa"
|  |  |  |           |        ├> "a.ad"
|  |  |  |           |        |  └> "a.ac"
|  |  |  |           |        |     └> "a.ab"
|  |  |  |           |        |        └> "a.aa"
|  |  |  |           |        └> "a.ae"
|  |  |  |           |           └> "a.ad"
|  |  |  |           |              ├> "a.aa"
|  |  |  |           |              └> "a.ac"
|  |  |  |           |                 └> "a.ab"
|  |  |  |           |                    └> "a.aa"
|  |  |  |           └> "a.ai"
|  |  |  |              └> "a.ah"
|  |  |  |                 ├> "a.aa"
|  |  |  |                 ├> "a.ae"
|  |  |  |                 |  ├> "a.ac"
|  |  |  |                 |  |  └> "a.ab"
|  |  |  |                 |  |     └> "a.aa"
|  |  |  |                 |  └> "a.ad"
|  |  |  |                 |     └> "a.ac"
|  |  |  |                 |        ├> "a.aa"
|  |  |  |                 |        └> "a.ab"
|  |  |  |                 |           └> "a.aa"
|  |  |  |                 └> "a.ag"
|  |  |  |                    └> "a.af"
|  |  |  |                       └> "a.ae"
|  |  |  |                          ├> "a.aa"
|  |  |  |                          ├> "a.ac"
|  |  |  |                          |  └> "a.ab"
|  |  |  |                          |     └> "a.aa"
|  |  |  |                          └> "a.ad"
|  |  |  |                             └> "a.ac"
|  |  |  |                                ├> "a.aa"
|  |  |  |                                └> "a.ab"
|  |  |  |                                   └> "a.aa"
|  |  |  ├> "a.hm"
|  |  |  |  ├> "a.em"
|  |  |  |  |  ├> "a.cm"
|  |  |  |  |  |  ├> "a.bm"
|  |  |  |  |  |  |  ├> "a.am"
|  |  |  |  |  |  |  |  ├> "a.aa"
|  |  |  |  |  |  |  |  ├> "a.ag"
|  |  |  |  |  |  |  |  |  ├> "a.ad"
|  |  |  |  |  |  |  |  |  |  └> "a.ac"
|  |  |  |  |  |  |  |  |  |     └> "a.ab"
|  |  |  |  |  |  |  |  |  |        └> "a.aa"
|  |  |  |  |  |  |  |  |  └> "a.af"
|  |  |  |  |  |  |  |  |     └> "a.ae"
|  |  |  |  |  |  |  |  |        └> …
|  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  └> …
|  |  |  |  |  |  └> …
|  |  |  |  |  └> …
|  |  |  |  └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;

exports[`domain (integration) should be able to shrink very-very-very-very-very-very-very-very-very-long-label.com 1`] = `
""very-very-very-very-very-very-very-very-very-long-label.com"
├> "aery-very-very-very-very-very-very-very-very-long-label.com"
|  ├> "a.com"
|  |  ├> "a.om"
|  |  |  ├> "a.am"
|  |  |  |  ├> "a.aa"
|  |  |  |  ├> "a.ag"
|  |  |  |  |  ├> "a.ad"
|  |  |  |  |  |  └> "a.ac"
|  |  |  |  |  |     └> "a.ab"
|  |  |  |  |  |        └> "a.aa"
|  |  |  |  |  └> "a.af"
|  |  |  |  |     └> "a.ae"
|  |  |  |  |        └> "a.ad"
|  |  |  |  |           ├> "a.aa"
|  |  |  |  |           └> "a.ac"
|  |  |  |  |              └> "a.ab"
|  |  |  |  |                 └> "a.aa"
|  |  |  |  ├> "a.aj"
|  |  |  |  |  └> "a.ai"
|  |  |  |  |     └> "a.ah"
|  |  |  |  |        └> "a.ag"
|  |  |  |  |           ├> "a.aa"
|  |  |  |  |           ├> "a.ad"
|  |  |  |  |           |  └> "a.ac"
|  |  |  |  |           |     └> "a.ab"
|  |  |  |  |           |        └> "a.aa"
|  |  |  |  |           └> "a.af"
|  |  |  |  |              └> "a.ae"
|  |  |  |  |                 └> "a.ad"
|  |  |  |  |                    ├> "a.aa"
|  |  |  |  |                    └> "a.ac"
|  |  |  |  |                       └> "a.ab"
|  |  |  |  |                          └> "a.aa"
|  |  |  |  └> "a.al"
|  |  |  |     └> "a.ak"
|  |  |  |        └> "a.aj"
|  |  |  |           ├> "a.aa"
|  |  |  |           ├> "a.af"
|  |  |  |           |  ├> "a.ad"
|  |  |  |           |  |  └> "a.ac"
|  |  |  |           |  |     └> "a.ab"
|  |  |  |           |  |        └> "a.aa"
|  |  |  |           |  └> "a.ae"
|  |  |  |           |     └> "a.ad"
|  |  |  |           |        ├> "a.aa"
|  |  |  |           |        └> "a.ac"
|  |  |  |           |           └> "a.ab"
|  |  |  |           |              └> "a.aa"
|  |  |  |           ├> "a.ah"
|  |  |  |           |  └> "a.ag"
|  |  |  |           |     └> "a.af"
|  |  |  |           |        ├> "a.aa"
|  |  |  |           |        ├> "a.ad"
|  |  |  |           |        |  └> "a.ac"
|  |  |  |           |        |     └> "a.ab"
|  |  |  |           |        |        └> "a.aa"
|  |  |  |           |        └> "a.ae"
|  |  |  |           |           └> "a.ad"
|  |  |  |           |              ├> "a.aa"
|  |  |  |           |              └> "a.ac"
|  |  |  |           |                 └> "a.ab"
|  |  |  |           |                    └> "a.aa"
|  |  |  |           └> "a.ai"
|  |  |  |              └> "a.ah"
|  |  |  |                 ├> "a.aa"
|  |  |  |                 ├> "a.ae"
|  |  |  |                 |  ├> "a.ac"
|  |  |  |                 |  |  └> "a.ab"
|  |  |  |                 |  |     └> "a.aa"
|  |  |  |                 |  └> "a.ad"
|  |  |  |                 |     └> "a.ac"
|  |  |  |                 |        ├> "a.aa"
|  |  |  |                 |        └> "a.ab"
|  |  |  |                 |           └> "a.aa"
|  |  |  |                 └> "a.ag"
|  |  |  |                    └> "a.af"
|  |  |  |                       └> "a.ae"
|  |  |  |                          ├> "a.aa"
|  |  |  |                          ├> "a.ac"
|  |  |  |                          |  └> "a.ab"
|  |  |  |                          |     └> "a.aa"
|  |  |  |                          └> "a.ad"
|  |  |  |                             └> "a.ac"
|  |  |  |                                ├> "a.aa"
|  |  |  |                                └> "a.ab"
|  |  |  |                                   └> "a.aa"
|  |  |  ├> "a.hm"
|  |  |  |  ├> "a.em"
|  |  |  |  |  ├> "a.cm"
|  |  |  |  |  |  ├> "a.bm"
|  |  |  |  |  |  |  ├> "a.am"
|  |  |  |  |  |  |  |  ├> "a.aa"
|  |  |  |  |  |  |  |  ├> "a.ag"
|  |  |  |  |  |  |  |  |  ├> "a.ad"
|  |  |  |  |  |  |  |  |  |  └> "a.ac"
|  |  |  |  |  |  |  |  |  |     └> "a.ab"
|  |  |  |  |  |  |  |  |  |        └> "a.aa"
|  |  |  |  |  |  |  |  |  └> "a.af"
|  |  |  |  |  |  |  |  |     └> "a.ae"
|  |  |  |  |  |  |  |  |        └> …
|  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  └> …
|  |  |  |  |  |  └> …
|  |  |  |  |  └> …
|  |  |  |  └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;
